--- a/style.css
+++ b/style.css
@@ -153,17 +153,11 @@ a{
 }
 
 
-.section_background{
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-}
+
 .background_number1{
     background-image: url(./assets/img/background1.png);
 }
+.background_number1,
 .background_number2,
 .background_number3,
 .section_number4,
@@ -174,6 +168,12 @@ a{
 .section_number9,
 .section_number10{
     background-image: url(./assets/img/background2.png);
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
 .section_number1 .left-container  .title {
     padding-left: 20%;
@@ -256,9 +256,24 @@ a{
 
 
 
+.children-on-road{
+    position: absolute;
+    width: 46%;
+    top: 0;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
 
-
-
+/* .children-on-road{
+    background-image: url(./assets/img/c1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+} */
 
 /* .second-section,
 .forth-section,
